--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -5,6 +5,8 @@ xmlns:tools="http://schemas.android.com/tools">
     android:glEsVersion="0x00020000"
     android:required="true" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 <application
     android:allowBackup="true"
     android:fullBackupContent="true"
@@ -24,10 +26,10 @@ xmlns:tools="http://schemas.android.com/tools">
     <activity
         android:name="com.ecorock.game.HomeScreen"
         android:exported="true">
-    <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-    </intent-filter>
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
     </activity>
 </application>
 
