Recording fully works, Song picking screen works (scrolling included), working pause button (no pause menu yet)

--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,7 @@ project(":android") {
         api "com.badlogicgames.ashley:ashley:$ashleyVersion"
         api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
         api "com.badlogicgames.gdx-controllers:gdx-controllers-android:$gdxControllersVersion"
+        implementation 'com.github.hissaan:TimeCounter:1.2'
         
     }
 }
