--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -5,8 +5,9 @@ xmlns:tools="http://schemas.android.com/tools">
     android:glEsVersion="0x00020000"
     android:required="true" />
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
 <application
     android:allowBackup="true"
     android:fullBackupContent="true"
@@ -21,8 +22,7 @@ xmlns:tools="http://schemas.android.com/tools">
         android:label="@string/app_name"
         android:screenOrientation="portrait"
         android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout"
-        android:exported="true">
-    </activity>
+        android:exported="true"></activity>
     <activity
         android:name="com.ecorock.game.HomeScreen"
         android:exported="true">
@@ -34,5 +34,3 @@ xmlns:tools="http://schemas.android.com/tools">
 </application>
 
 </manifest>
-
-
