--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?><manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools">
-
 <uses-feature
     android:glEsVersion="0x00020000"
     android:required="true" />
@@ -24,7 +24,7 @@ xmlns:tools="http://schemas.android.com/tools">
         android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout"
         android:exported="true"></activity>
     <activity
-        android:name="com.ecorock.game.HomeScreen"
+        android:name="com.ecorock.game.Ui.MainPage.HomeScreen"
         android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -32,5 +32,4 @@ xmlns:tools="http://schemas.android.com/tools">
         </intent-filter>
     </activity>
 </application>
-
 </manifest>
