--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><manifest xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools">
 <uses-feature
     android:glEsVersion="0x00020000"
@@ -31,5 +30,18 @@ xmlns:tools="http://schemas.android.com/tools">
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
     </activity>
+    <activity
+        android:name="com.ecorock.game.MainPage.MainPage"
+        android:exported="false"
+
+        />
+    <activity
+        android:name="com.ecorock.game.Ui.Login.LoginPage"
+        android:exported="false" />
+    <activity
+        android:name="com.ecorock.game.Ui.Signup.SignupPage"
+        android:exported="false"
+
+        />
 </application>
 </manifest>
