Finally meets all requirements, update changed to activity for result and it works fully, also made a go back button from song select

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -43,5 +43,11 @@ xmlns:tools="http://schemas.android.com/tools">
         android:exported="false"
 
         />
+    <activity
+        android:name="com.ecorock.game.MainPage.UpdateActivity"
+        android:exported="false"
+
+        />
 </application>
 </manifest>
+
