--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: 'com.google.gms.google-services'
 android {
     namespace "com.ecorock.game"
     buildToolsVersion "33.0.2"
@@ -42,6 +43,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'com.google.firebase:firebase-firestore:24.10.3'
 }
 
 
